--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
     <h2 class="heading"><span>Відправити </span> замовлення</h2>
 
-    <div class="row">
+    <div class="row1">
 
         <div class="img">
             <img src="https://i.ibb.co/pQQ5rKf/0-02-05-e44e18ad92f122c49fb99b9c7531156b051953502d672ca5210b72dc8251d9a8-1ee2144d834d8e13-2.png">
