--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                          
                           <span>Ваше місто</span>
                          <input type="order"  name="Ведіть ваше місто" id="" class="box" required 
-                         placeholder="Ведіть ваше замовлення" autocomplete="off">
+                         placeholder="Ведіть ваше місто" autocomplete="off">
             
                          <span>Виберіть спосіб оплати</span>
                          <select name="спосіб оплати" id="" class="box"required>
