--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                           
                          <span class="span1">Ваше замовлення</span>
                          <input type="text"  name="Ваше замовлення" id="ім'я" class="box" required 
-                         placeholder="Ваше замовлення" autocomplete="off">
+                         placeholder="Вставити замовлення Ctrl+V" autocomplete="off">
             
                          <span> Ваше П.І.Б</span>
                          <input type="text"  name="номер телефону" id="" class="box" required 
